# SilentInstallHelper

./: .gitignore  PROJEKTPLAN.md  build.ps1  config-7zip-extract.jsonc  config-example-7z-icacls.jsonc  config-template-basic.jsonc  config-template-full.jsonc  config-template-silent.jsonc  config-template.jsonc  example-config.json  launch-basic.cmd  launch-full.cmd  launch-silent.cmd  launch-template.cmd  launch.cmd  pyproject.toml  readme.md  release.ps1  run.py  silentinstallhelper.spec  windows-version-info.txt
assets/: README.md
src/silent_install_helper/: __init__.py  config_loader.py  executor.py  logging_utils.py  main.py  models.py  ui.py
tests/: conftest.py  test_config_loader.py  test_executor.py
